--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
+<script src="main.js"></script>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
@@ -417,7 +418,7 @@ document.addEventListener('DOMContentLoaded', function() {
 })();
 </script>
 </head>
-<body style="display: flex; flex-direction: column; min-height: 100vh;">
+<body hidden style="display: flex; flex-direction: column; min-height: 100vh;">
 <div style="flex: 1;">
 <header>
 <div class="container-fluid px-0" style="background-color: #FFFFFF; border-bottom: 1px solid #000000;">
